--- a/src/app/quoteinfo/quoteinfo.component.html
+++ b/src/app/quoteinfo/quoteinfo.component.html
@@ -15,7 +15,7 @@
         <div *ngIf="author.invalid && author.touched">
           <small [class.d-none]="isInvalid" class="text-danger">This field can't be empty</small>
         </div> <br>
-      <button (click)="sub()" class="btn-success">Update</button>
+      <button (click)="sub()" class="btn btn-success btn-lg">Update</button>
       </div>
     </form>
   </div>
