updated my components

--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,9 +1,9 @@
 
-  <div class="">
-    <div class="row text-success">
+  <div>
+    <div>
       <h2>Quotes</h2>
-      <h2 class="col-3">Author</h2>
-      <h2 class="col-3">Votes</h2>
+      <h2 >Author</h2>
+      <h2>Votes</h2>
     </div>
     <hr>
     <div class="row">
