--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -7,13 +7,13 @@
     </div>
     <hr>
     <div class="row">
-      <ol class="col-6">
+      <ol>
         <li *ngFor="let quote of quotes">{{quote.quote}} <br> <span class="text-success">Submitted on {{quote.submitDate}}</span></li>
       </ol>
-      <ul class="col-3 ml-3 list-unstyled">
-        <li class="col-lg-3" *ngFor="let quote of quotes"> <br> {{quote.author}} </li>
+      <ul >
+        <li *ngFor="let quote of quotes"> <br> {{quote.author}} </li>
       </ul>
-      <ul class="col ml-3 list-unstyled">
+      <ul>
         <li *ngFor="let quote of quotes;let i = index"><br> {{quote.upVotes}}
          <button class="btn-xs" (click)="upVote(i)">
            <span class="text-danger"><i class="material-icons">thumb_up</i></span></button>
