--- a/src/app/quoteinfo/quoteinfo.component.html
+++ b/src/app/quoteinfo/quoteinfo.component.html
@@ -2,6 +2,7 @@
 <div *ngIf='EnterQuote'>
   <div class="row">
     <form (ngSubmit)="add()" #form="ngForm">
+        <!-- Description Input -->
       <div>
         <label for="quoteStr">New Quote</label>
         <textarea  [(ngModel)] = "newQuote.quote" name="quoteStr" id="quoteStr" class="form-control" [class.is-invalid]="quoteStr.invalid && quoteStr.touched" #quoteStr = "ngModel" required></textarea>
@@ -9,11 +10,13 @@
       <div class="text-danger" *ngIf='quoteStr.invalid && quoteStr.touched' >
         <small>fill in the field</small>
       </div>
+
+          <!-- Name Form -->
       <div>
         <label for="author">Author</label>
         <input placeholder="Enter the author's name" id="author" type="text" class="form-control" [class.is-invalid] ="author.invalid && author.touched" name="author" #author="ngModel" [(ngModel)] = "newQuote.author" required>
         <div *ngIf="author.invalid && author.touched">
-          <small [class.d-none]="isInvalid" class="text-danger">This field can't be empty</small>
+          <small [class.d-none]="isInvalid" class="text-danger">fill in the field</small>
         </div> <br>
       <button (click)="sub()" class="btn btn-success btn-lg">Update</button>
       </div>
